# Anvil

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.githooks/: pre-push
.github/: copilot-instructions.md
ai/: README.md
anvil_mcp/: __init__.py  client.py  server.py
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  audit.py  config_store.py  models.py  runtime.py  storage.py  tools.py
backend/app/agent/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  openrouter.py
backend/app/api/: agent.py  compile.py  deps.py  firmware.py  gdb.py  gdb_ws.py  health.py  protocol.py  pwn.py  rizin.py  sessions.py  ws.py
backend/app/bridges/: base.py  binary_analyzer.py  compilation.py  firmware_bridge.py  gdb_bridge.py  protocol_bridge.py  pwn_bridge.py  registry.py  rizin_bridge.py
backend/app/core/: config.py  exceptions.py  lifecycle.py  sanitization.py  subprocess_manager.py  workspace.py
backend/app/models/: compilation.py  errors.py  firmware.py  gdb.py  health.py  protocol.py  pwn.py  rizin.py  sessions.py  tools.py  ws.py
backend/app/sessions/: manager.py
docker/: Dockerfile.backend  README.md
samples/: re_sample
src/: App.css  App.tsx  config.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
tests/: conftest.py  test_agent_api.py  test_agent_storage.py  test_agent_tools.py  test_api.py  test_binary_analyzer.py  test_bridge_base.py  test_bugfixes.py  test_compilation.py  test_compile_api.py  test_config.py  test_data_flow.py  test_e2e_security.py  test_exceptions.py  test_ws.py  (+15 more)
(+155 files in other folders)
